# Lamb

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Lamb.cabal  Makefile  README.md
app/: Main.hs
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
include/: pch.hpp
include/data/: monoid.hpp
include/frontend/: Token.hpp  loader.hpp  scanner.hpp  token.hpp
src/: CMakeLists.txt  main.cpp
src/Lamb/: Parser.hs
src/frontend/: CMakeLists.txt  scanner.cpp
test_programs/: test1.lam
tst/programs/: test1.lam
